--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div>
     <p>
-      I am currently learning to code with <a href="https://www.codefirstgirls.org.uk/">Code First Girls</a>. Going over everything from how the
+      You are! currently learning to code with <a href="https://www.codefirstgirls.org.uk/">Code First Girls</a>. Going over everything from how the
       internet works, to creating websites and version control with git. A lot to cover in only 8 weeks!
       Everyone should learn to code, here are some pretty good reasons why...
     </p>
